# poetry_constraints-txt-direct-dep

./: README.md  autotest_config.json  expected-tree.json  pyproject.toml  whitesource.config
