[tool.poetry]
name = "poetry-constraints-txt-direct-dep"
version = "0.1.0"
description = "Probe: poetry project with constraints.txt pinning a DIRECT dep (requests), applyConstraints=true (PRD-8924 / SCA-5467)"
authors = ["Mend QA <qa@mend.io>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
